example/secondfile/objects/Apttus_Attr_Mandatory_Fields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>AccessSpeedIndexAddSite__c</fullName>
        <label>AccessSpeedIndexAddSite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccessSpeedIndexSpeedChange__c</fullName>
        <label>AccessSpeedIndexSpeedChange</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccessSpeedIndexUBB__c</fullName>
        <label>AccessSpeedIndexUBB</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccessSpeedIndexUbbAddSite__c</fullName>
        <label>AccessSpeedIndexUbbAddSite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccessSpeedIndex__c</fullName>
        <label>AccessSpeedIndex</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccessTypeIndexAddSite__c</fullName>
        <label>AccessTypeIndexAddSite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccessTypeIndexSpeedChange__c</fullName>
        <label>AccessTypeIndexSpeedChange</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccessTypeIndexUBB__c</fullName>
        <label>AccessTypeIndexUBB</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccessTypeIndexUbbAddSite__c</fullName>
        <label>AccessTypeIndexUbbAddSite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccessTypeIndex__c</fullName>
        <label>AccessTypeIndex</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concurrent_Calls_Ubb__c</fullName>
        <label>Concurrent Calls Ubb</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Concurrent_Calls__c</fullName>
        <label>Concurrent Calls</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enhanced_Features_Ubb__c</fullName>
        <label>Enhanced Features Ubb</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enhanced_Features__c</fullName>
        <label>Enhanced Features</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_IndicesAddSite__c</fullName>
        <label>Field IndicesAddSite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_IndicesUBBAddSite__c</fullName>
        <label>Field IndicesUBBAddSite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_IndicesUBB__c</fullName>
        <label>Field IndicesUBB</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Indices__c</fullName>
        <label>Field Indices</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Flexible_Reach_Plan_Ubb__c</fullName>
        <label>IP Flexible Reach Plan Ubb</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Flexible_Reach_Plan__c</fullName>
        <label>IP Flexible Reach Plan</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndexOfUbbAddSite__c</fullName>
        <label>IndexOfUbbAddSite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndexOfUbb__c</fullName>
        <label>IndexOfUbb</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndexOfVlanAddSite__c</fullName>
        <label>IndexOfVlanAddSite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndexOfVlan__c</fullName>
        <label>IndexOfVlan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Local_Phone_Numbers_Ubb__c</fullName>
        <label>New Local Phone Numbers Ubb</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Local_Phone_Numbers__c</fullName>
        <label>New Local Phone Numbers</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Virtual_Phone_Numbers_Ubb__c</fullName>
        <label>New Virtual Phone Numbers Ubb</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Virtual_Phone_Numbers__c</fullName>
        <label>New Virtual Phone Numbers</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PortTypeIndexAddSite__c</fullName>
        <label>PortTypeIndexAddSite</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PortTypeIndexSpeedChange__c</fullName>
        <label>PortTypeIndexSpeedChange</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PortTypeIndexUBB__c</fullName>
        <label>PortTypeIndexUBB</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PortTypeInxed__c</fullName>
        <label>PortTypeIndex</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ported_Phone_Numbers_Ubb__c</fullName>
        <label>Ported Phone Numbers Ubb</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ported_Phone_Numbers__c</fullName>
        <label>Ported Phone Numbers</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Apttus_Attr_Mandatory_Fields</label>
</CustomObject>